<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragmentScoresFourPlayer">

    <LinearLayout
        android:id="@+id/totalScores"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.75"
            android:layout_height="match_parent"
            android:text="@string/total"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:inputType="text"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/totalScoreOne"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/total_one"
            android:textStyle="bold"
            android:inputType="text"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/totalScoreTwo"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/total_two"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/totalScoreThree"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/total_three"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/totalScoreFour"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/total_four"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</RelativeLayout>