<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragmentNamesFourPlayer">

    <LinearLayout
        android:id="@+id/playerNames"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.75"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/player_one"
            android:textSize="12sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/player_two"
            android:textSize="12sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/playerThreeName"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/player_three"
            android:textSize="12sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/playerFourName"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/player_four"
            android:textSize="12sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            android:selectAllOnFocus="true"/>

    </LinearLayout>

</FrameLayout>